--- a/cards.css
+++ b/cards.css
@@ -21,6 +21,7 @@ body {
       
         #cardDisplay {
             height: 400px;
+            position: relative;
             margin: 8px;
             padding: 8px;
             font-family: "Lato", sans-serif;
@@ -41,6 +42,9 @@ body {
             }
 
             .newMsg{
-              width: 30%;
-              height: 30%;
+              height: 200px;
+              width: 200px;
+              border: 1px solid #4b4d55;
+              margin: 6px 12px;
+              float: left;
             }
